DONE NG IF WITH STOCK

--- a/src/app/countries/countries.component.html
+++ b/src/app/countries/countries.component.html
@@ -1,3 +1,5 @@
+{{my_number | filesize}}
+<hr>
 <button (click)="send(selected.currencies[0].name)">Enviar</button><br/>
 <button (click)="send2(my_number)">My pipe Console</button>
 {{selected.currencies[0].name | uppercase}}
